fixed the perseverance section on mobile view

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -176,6 +176,9 @@ margin: 0;
     padding-left:0;
     margin-top: 20px;
 }
+.sectionsinfooter ul{
+    padding-left:0;
+   }
     @media only screen and (max-width: 767px) {
         .ministry-section{
             img{
@@ -192,5 +195,12 @@ margin: 0;
             margin-left: auto;
             margin-right: auto;
             width: 50%;
+           }
+           .side-announcement{
+            width: 100% !important;
+            margin-top: 20px;
+            .songlist{
+                margin-top: 10px;
+            }
            }
     }
